--- a/rnaSeqAnalysisZOO765.ipynb
+++ b/rnaSeqAnalysisZOO765.ipynb
@@ -23,7 +23,80 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hanielcedraz/Aula_765-RNA-Seq/blob/main/rnaSeqAnalysisZOO765.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/hanielcedraz/ZOO_765-RNA-Seq_Course/blob/main/rnaSeqAnalysisZOO765.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CHtoyHJvuUmh"
+      },
+      "source": [
+        "# Basic Linux commands\n",
+        "\n",
+        "Please, open a new box and run each one of the commands and see what happen.\n",
+        "You can open as many box you need, or just replace the command and run another one in the same box.\n",
+        "\n",
+        "\n",
+        "```\n",
+        "pwd # Print the work directory\n",
+        "ls [file/dir] # list all content in a directory;\n",
+        "ls -l [file/dir] – Long list. Show hidden files;\n",
+        "cd  - Change Directory;\n",
+        "cp f1 f2 – Copy file f1 to file f2;\n",
+        "mv home/f1 new_directory/f1 – Move file from a directory to another;\n",
+        "mv f1 f2 – Rename file f1 to file f2;\n",
+        "```\n",
+        "\n",
+        "```\n",
+        "mkdir dir # Create a new folder;\n",
+        "rm arquivo # Delete file;\n",
+        "rmdir dir # Delete empty folder;\n",
+        "rm -rf dir # Force delete nonempty;\n",
+        "Nano/vi file.txt # Text editor;\n",
+        "cat f1 [f2] # print file f1 and concatenate into file f2;\n",
+        "less file # print one page a time;\n",
+        "head file # print the first 10 rows;\n",
+        "tail file # Print the last 10 rows;\n",
+        "\n",
+        "```\n",
+        "\n",
+        "Special Character:\n",
+        " - |\tVertical bar, called “pipe”, it indicates that finish a command and start another;\n",
+        " - < > \tIn and out of a command;\n",
+        " - \\>>\tAppend contente;\n",
+        " - .\tCurrent dir\n",
+        " - ..\tBack one dir;\n",
+        " - \\/\tFolder Delimiter;\n",
+        " - \\*\tWild character, used in the beggining or end of a command;\n",
+        "\n",
+        "\n",
+        "When name files or directory avoid special character and spaces. Use dot (.), Underscore (_) between words or CamelCase!!\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pYSr_yYhuh5L",
+        "outputId": "c5e85f01-7891-49a0-d9c7-c7612b65dd88"
+      },
+      "source": [
+        "%%bash\n",
+        "#example\n",
+        "pwd"
+      ],
+      "execution_count": 263,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content\n"
+          ]
+        }
       ]
     },
     {
